# Support

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: Engine.h  EngineLogger.h  EventSystem.h  ILogger.h  WindowManager.h
engine/src/: Engine.cc  EngineLogger.cc  EventSystem.cc  WindowManager.cc
gal/: CMakeLists.txt
gal/include/: IEngineInitalizer.h  IEventHandler.h  IWindowHandler.h
game/: CMakeLists.txt  main.cpp
opengl/: CMakeLists.txt
opengl/include/: EngineEvents.h  EngineInitalizer.h  EventHandler.h  WindowHandler.h
opengl/src/: EngineEvents.cc  EngineInitalizer.cc  EventHandler.cc  WindowHandler.cc
